# video-stream-analysis

./: .gitignore  CMakeLists.txt  batch_run.sh  config.cpp  config.hpp  data.csv  frame_analysis.cpp  frame_analysis.hpp  helpers.cpp  helpers.hpp  main.cpp  main.hpp  metrics.cpp  metrics.hpp  readme.md  stream_analysis.cpp  stream_analysis.hpp  stream_analyzer.cpp  stream_analyzer.hpp
config/: config.json  config_local.json  config_local2.json  config_out_1136.json  config_out_1137.json  config_out_1138.json  config_out_1139.json  config_out_1140.json  config_out_1141.json  config_out_1142.json  config_out_1143.json  config_out_1144.json  config_out_1145.json  config_out_1146.json  config_out_1147.json  config_out_1148.json  config_out_1149.json  config_out_1150.json  config_out_1151.json  config_out_1152.json  config_out_1153.json  config_out_1154.json  config_out_1155.json  config_out_1156.json  config_out_1157.json  config_out_1158.json  config_out_1159.json  config_out_1160.json  configs.json
failed_streams/: failed_streams.txt
include/: capture.hpp  config.hpp  ffmpeg_capture.hpp  frame.hpp  frame_analysis.hpp  gstreamer_capture.hpp  helpers.hpp  icapture.hpp  metrics.hpp  stream_analyzer.hpp  threading.hpp
program_config/: program_config.json
results/: results.csv  results_config.csv  results_config_local2.csv  results_config_out_1136.csv  results_config_out_1137.csv  results_config_out_1138.csv  results_config_out_1139.csv  results_config_out_1140.csv  results_config_out_1141.csv  results_config_out_1142.csv  results_config_out_1143.csv  results_config_out_1145.csv  results_config_out_1146.csv  results_config_out_1147.csv  results_config_out_1148.csv  results_config_out_1150.csv  results_config_out_1151.csv  results_config_out_1152.csv  results_config_out_1153.csv  results_config_out_1154.csv  results_config_out_1155.csv  results_config_out_1156.csv  results_config_out_1157.csv  results_config_out_1158.csv  results_config_out_1159.csv  results_config_out_1160.csv  results_config_out_178.csv  results_config_out_180.csv  results_config_out_196.csv  results_config_out_206.csv  results_config_out_207.csv  results_config_out_208.csv  results_in_397.json  results_in_479.json  results_out_1069.json  results_out_1070.json  results_out_1073.json  results_out_109.json  results_out_363.json  results_out_376.json  (+12 more)
sample_config/: config.json
src/: capture.cpp  config.cpp  ffmpeg_capture.cpp  frame.cpp  frame_analysis.cpp  gstreamer_capture.cpp  helpers.cpp  main.cpp  metrics.cpp  stream_analyzer.cpp
streams/: streams.json
